--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
     <title>GoogleClon</title>
 </head>
@@ -19,7 +20,7 @@
             </ul>
             <div class="header__options">
                 <a href="#" class="header__link">
-                    <img src="svg/apps.svg" alt="Apps Icon">
+                    <img class="header__icon" src="svg/apps.svg" alt="Apps Icon">
                 </a>
             </div>
             <div class="header__account">
@@ -31,7 +32,7 @@
     </header>
     <main class="main">
         <section class="main__title">
-            <h1 class="main__title-text">Google</h1>
+            <img class="main__google-logo" src="img/Google-Logo.png" alt="Google Logo">
         </section>
         <section class="main__inputs">
             <div class="main__search-bar">
@@ -42,7 +43,7 @@
                     <input class="main__file-input main__file-input--hidden" type="file" id="main__file-input">
                     <input class="main__search-input" type="search">
                 </div>
-                <div class="main__search-bar main_search-bar--right">
+                <div class="main__search-bar main__search-bar--right">
                     <img class="main__icon" src="svg/microphone.svg" alt="Microphone Icon">
                     <img class="main__icon" src="svg/scan-search.svg" alt="Image Search">
                     <button class="main__button">
