--- a/index.html
+++ b/index.html
@@ -32,18 +32,18 @@
     </header>
     <main class="main">
         <section class="main__title">
-            <img class="main__google-logo" src="img/Google-Logo.png" alt="Google Logo">
+            <img class="main__google-logo" src="svg/google-plain-wordmark.svg" alt="Google Logo">
         </section>
         <section class="main__inputs">
             <div class="main__search-bar">
-                <div class="main__serach-bar main__search-bar--left">
+                <div class="main__search-bar--left">
                     <label for="main__file-input">
                         <img class="main__icon" src="svg/plus.svg" alt="Addition File Icon">
                     </label>
                     <input class="main__file-input main__file-input--hidden" type="file" id="main__file-input">
                     <input class="main__search-input" type="search">
                 </div>
-                <div class="main__search-bar main__search-bar--right">
+                <div class="main__search-bar--right">
                     <img class="main__icon" src="svg/microphone.svg" alt="Microphone Icon">
                     <img class="main__icon" src="svg/scan-search.svg" alt="Image Search">
                     <button class="main__button">
@@ -51,6 +51,14 @@
                         <p class="main__button-text">Modo IA</p>
                     </button>
                 </div>
+            </div>
+            <div class="main__special-buttons">
+                <button class="main__width-google">
+                    Búscar con Google
+                </button>
+                <button class="main__have-lucky">
+                    Voy a tener suerte
+                </button>
             </div>
         </section>
     </main>
